--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -25,10 +25,10 @@ logo: "/assets/images/svg/Domino.svg"
 favicon_ico: "/assets/images/favicon.ico"
 
 # External navigation links
-nav_external_links:
-  - title: Report an issue
-    url: https://github.com/HCL-TECH-SOFTWARE/domino-on-aws/issues
-    hide_icon: false
+# nav_external_links:
+#  - title: Report an issue
+#    url: https://github.com/HCL-TECH-SOFTWARE/domino-on-aws/issues
+#    hide_icon: false
 
 # Enable or disable the site search
 # Supports true (default) or false
